--- a/.github/workflows/salus.yaml
+++ b/.github/workflows/salus.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Semgrep
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Scan
         id: scan
         run: |
@@ -22,16 +22,16 @@ jobs:
     runs-on: ubuntu-latest
     name: Salus Security Scan
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Salus Scan
       id: salus_scan
-      uses: federacy/scan-action@0.1.4
+      uses: federacy/scan-action@0.1.5
       env:
         SALUS_CONFIGURATION: "file://salus-config.yaml"
       with:
         report_uri: file://./salus-report.txt
         report_format: txt
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@v4
       if: failure()
       with:
         name: Scan results
