--- a/.github/workflows/salus.yaml
+++ b/.github/workflows/salus.yaml
@@ -1,7 +1,7 @@
 on:
   push:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
 
 name: Salus security scan
 
@@ -22,17 +22,17 @@ jobs:
     runs-on: ubuntu-latest
     name: Salus Security Scan
     steps:
-    - uses: actions/checkout@v4
-    - name: Salus Scan
-      id: salus_scan
-      uses: federacy/scan-action@0.1.5
-      env:
-        SALUS_CONFIGURATION: "file://salus-config.yaml"
-      with:
-        report_uri: file://./salus-report.txt
-        report_format: txt
-    - uses: actions/upload-artifact@v4
-      if: failure()
-      with:
-        name: Scan results
-        path: ./salus-report.txt
+      - uses: actions/checkout@v4
+      - name: Salus Scan
+        id: salus_scan
+        uses: federacy/scan-action@0.1.5
+        env:
+          SALUS_CONFIGURATION: "file://salus-config.yaml"
+        with:
+          report_uri: file://./salus-report.txt
+          report_format: txt
+      - uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: Scan results
+          path: ./salus-report.txt
