Add auto PR comment

--- a/.github/workflows/tfdocs.yaml
+++ b/.github/workflows/tfdocs.yaml
@@ -33,6 +33,7 @@ jobs:
           cat final_hash.txt
 
       - name: Compare hashes and fail if different
+        id: compare_hashes
         run: |
           if ! diff initial_hash.txt final_hash.txt; then
             echo "Docs are not up to date! Run 'make tfplugindocs' and commit the changes."
@@ -40,3 +41,14 @@ jobs:
           else
             echo "Docs are up to date."
           fi
+
+      - name: Comment PR
+        if: always() && steps.compare_hashes.outcome == 'failure'
+        uses: thollander/actions-comment-pull-request@v3
+        with:
+          message: |
+            ## :warning: Docs were update directly, not via code!
+          pr-number: ${{ github.event.pull_request.number }}
+          mode: ${{ steps.compare_hashes.outcome == 'failure' && 'recreate' || 'delete' }}
+          comment-tag: compare-hashes
+          create-if-not-exists: true
