Fix tfdocs wf to create comment only on PR event

--- a/.github/workflows/tfdocs.yaml
+++ b/.github/workflows/tfdocs.yaml
@@ -43,7 +43,7 @@ jobs:
           fi
 
       - name: Comment PR
-        if: always()
+        if: always() && github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v3
         with:
           message: |
