--- a/salus-config.yaml
+++ b/salus-config.yaml
@@ -25,7 +25,7 @@ enforced_scanners: "all"
 scanner_configs:
   GoVersionScanner:
     error:
-      min_version: "1.22.0"
+      min_version: "1.24.0" # GO_VERSION_DEF
 
   GoOSV:
     exceptions:
