--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.22
+          go-version: 1.24 # GO_VERSION_DEF
       - name: Import GPG key
         id: import_gpg
         # TODO: move this to HashiCorp namespace or find alternative that is just simple gpg commands
